trying to prevent image from stretching

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 .img-rounded {
     border-radius:6px;
-    
+    display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    object-fit: cover;
 }
 
 .cursive {
